# small-defense

./: CMakeLists.txt  contributors.txt  main.cpp
Worker/: Checker.cpp  Checker.h  Ip.h  Master.cpp  Master.h  System.cpp  System.h
